--- a/po/hr.po
+++ b/po/hr.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: hr\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-12-14 10:47+0100\n"
-"PO-Revision-Date: 2006-09-30 17:36+0100\n"
+"POT-Creation-Date: 2006-12-20 15:40+0100\n"
+"PO-Revision-Date: 2006-12-14 18:24+0100\n"
 "Last-Translator: Renato Pavicic <renato@translator-shop.org>\n"
 "Language-Team: CROATIAN <www.translator-shop.org>\n"
 "MIME-Version: 1.0\n"
@@ -319,9 +319,8 @@ msgid "failed to write configuration file: %s"
 msgstr "zapisivanje konfiguracijske datoteke %s nije uspjelo"
 
 #: src/virterror.c:581
-#, fuzzy
 msgid "parser error"
-msgstr "interna pogreška"
+msgstr "pogreška raščlanjivanja"
 
 #: src/xmlrpc.c:63
 msgid "copying node content"
@@ -535,9 +534,8 @@ msgid "domain information incomplete, missing kernel"
 msgstr "podaci domene nisu potpuni, nedostaje kernel"
 
 #: src/xend_internal.c:1604
-#, fuzzy
 msgid "domain information incomplete, vbd has no src"
-msgstr "podaci domene nisu potpuni, vbd nema dev"
+msgstr "podaci domene nisu potpuni, vbd nema src"
 
 #: src/xend_internal.c:1610
 msgid "domain information incomplete, vbd has no dev"
@@ -546,10 +544,14 @@ msgstr "podaci domene nisu potpuni, vbd nema dev"
 #: src/xend_internal.c:1618
 msgid "cannot parse vbd filename, missing driver name"
 msgstr ""
+"raščlanjivanje naziva datoteke vbd nije moguće, nedostaje naziv upravljačkog "
+"programa"
 
 #: src/xend_internal.c:1637
 msgid "cannot parse vbd filename, missing driver type"
 msgstr ""
+"raščlanjivanje naziva datoteke vbd nije moguće, nedostaje vrsta upravljačkog "
+"programa"
 
 #: src/xend_internal.c:1981
 msgid "failed to parse Xend domain information"
@@ -570,10 +572,10 @@ msgstr "Dohvaćanje uređaja za domenu %s nije uspjelo\n"
 msgid "Failed to resume new domain %s\n"
 msgstr "Nastavljanje nove domene %s nije uspjelo\n"
 
-#: src/xend_internal.c:3146
-#, fuzzy, c-format
+#: src/xend_internal.c:3145
+#, c-format
 msgid "Failed to create inactive domain %s\n"
-msgstr "Izrada domene %s nije uspjela\n"
+msgstr "Izrada neaktivne domene %s nije uspjela\n"
 
 #: src/virsh.c:234
 msgid "print help"
@@ -830,27 +832,25 @@ msgstr "Obnavljanje domene iz %s nije uspjelo"
 
 #: src/virsh.c:812
 msgid "dump the core of a domain to a file for analysis"
-msgstr ""
+msgstr "izbacivanje jezgre domene u datoteku, radi analize"
 
 #: src/virsh.c:813
-#, fuzzy
 msgid "Core dump a domain."
-msgstr "nastavi domenu"
+msgstr "Izbacivanje jezgre domene."
 
 #: src/virsh.c:819
-#, fuzzy
 msgid "where to dump the core"
-msgstr "lokacija spremanja podataka"
+msgstr "lokacija izbacivanja jezgre"
 
 #: src/virsh.c:841
-#, fuzzy, c-format
+#, c-format
 msgid "Domain %s dumpd to %s\n"
-msgstr "Domena %s spremljena je u %s\n"
+msgstr "Domena %s je izbačena u %s\n"
 
 #: src/virsh.c:843
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to core dump domain %s to %s"
-msgstr "Spremanje domene %s na lokaciju %s nije uspjelo"
+msgstr "Izbacivanje jezgre domene %s u %s nije uspjelo."
 
 #: src/virsh.c:857
 msgid "resume a domain"
