--- a/po/ko.po
+++ b/po/ko.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ko\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-12-14 10:47+0100\n"
-"PO-Revision-Date: 2006-11-28 12:16+1000\n"
+"POT-Creation-Date: 2006-12-20 15:40+0100\n"
+"PO-Revision-Date: 2006-12-15 11:06+1000\n"
 "Last-Translator: Eunju Kim <eukim@redhat.com>\n"
 "Language-Team: Korean <ko@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -325,9 +325,8 @@ msgid "failed to write configuration file: %s"
 msgstr "설정 파일 쓰기 실패: %s"
 
 #: src/virterror.c:581
-#, fuzzy
 msgid "parser error"
-msgstr "내부 오류"
+msgstr "구문 분석 오류"
 
 #: src/xmlrpc.c:63
 msgid "copying node content"
@@ -541,9 +540,8 @@ msgid "domain information incomplete, missing kernel"
 msgstr "도메인 정보가 완료되지 않음, 커널 부재"
 
 #: src/xend_internal.c:1604
-#, fuzzy
 msgid "domain information incomplete, vbd has no src"
-msgstr "도메인 정보가 완료되지 않음, vbd는 dev가 없음"
+msgstr "도메인 정보가 완료되지 않음, vbd는 src가 없음"
 
 #: src/xend_internal.c:1610
 msgid "domain information incomplete, vbd has no dev"
@@ -551,11 +549,11 @@ msgstr "도메인 정보가 완료되지 않음, vbd는 dev가 없음"
 
 #: src/xend_internal.c:1618
 msgid "cannot parse vbd filename, missing driver name"
-msgstr ""
+msgstr "vbd 파일명을 구문 분석할 수 없음, 드라이버명 부재"
 
 #: src/xend_internal.c:1637
 msgid "cannot parse vbd filename, missing driver type"
-msgstr ""
+msgstr "vbd 파일명을 구문 분석할 수 없음, 드라이버 유형 부재"
 
 #: src/xend_internal.c:1981
 msgid "failed to parse Xend domain information"
@@ -576,10 +574,10 @@ msgstr "도메인 %s에 대한 장치 가져오기 실패\n"
 msgid "Failed to resume new domain %s\n"
 msgstr "새 도메인 %s를 다시 시작하기 실패\n"
 
-#: src/xend_internal.c:3146
-#, fuzzy, c-format
+#: src/xend_internal.c:3145
+#, c-format
 msgid "Failed to create inactive domain %s\n"
-msgstr "도메인 %s 생성 실패\n"
+msgstr "비활성화 도메인 %s 생성 실패\n"
 
 #: src/virsh.c:234
 msgid "print help"
@@ -834,27 +832,25 @@ msgstr "%s에서 도메인을 복구하기 실패"
 
 #: src/virsh.c:812
 msgid "dump the core of a domain to a file for analysis"
-msgstr ""
+msgstr "도메인을 파일에 코어 덤프하여 분석"
 
 #: src/virsh.c:813
-#, fuzzy
 msgid "Core dump a domain."
-msgstr "도메인을 다시 시작"
+msgstr "도메인을 코어 덤프함."
 
 #: src/virsh.c:819
-#, fuzzy
 msgid "where to dump the core"
-msgstr "데이터를 저장할 장소"
+msgstr "코어 덤프할 위치"
 
 #: src/virsh.c:841
-#, fuzzy, c-format
+#, c-format
 msgid "Domain %s dumpd to %s\n"
-msgstr "도메인 %s는 %s에 저장됨\n"
+msgstr "도메인 %s를 %s에 덤프함\n"
 
 #: src/virsh.c:843
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to core dump domain %s to %s"
-msgstr "도메인 %s를 %s에 저장하기 실패"
+msgstr "도메인 %s를 %s에 코어 덤프하기 실패"
 
 #: src/virsh.c:857
 msgid "resume a domain"
