--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -1,20 +1,21 @@
 # translation of pt_BR.po to Brazilian Portuguese
 # Copyright (C) 2006 Free Software Foundation, Inc.
-# This file is distributed under the same license as the PACKAGE package.
+# This file is distributed under the same license as the pt_BR package.
 # Valnir Ferreira Jr. <vferreir@redhat.com>, 2006.
-#
+# Igor Pires Soares <igor@projetofedora.org>, 2006.
+# 
+# 
 msgid ""
 msgstr ""
 "Project-Id-Version: pt_BR\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-12-14 10:47+0100\n"
-"PO-Revision-Date: 2006-11-01 17:41+1000\n"
-"Last-Translator: Valnir Ferreira Jr. <vferreir@redhat.com>\n"
-"Language-Team: Brazilian Portuguese\n"
+"POT-Creation-Date: 2006-12-20 15:40+0100\n"
+"PO-Revision-Date: 2006-12-14 11:43-0200\n"
+"Last-Translator: Igor Pires Soares <igor@projetofedora.org>\n"
+"Language-Team: Brazilian Portuguese <fedora-trans-pt_br@redhat.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.9.1\n"
 
 #: src/libvirt.c:245 src/libvirt.c:309 src/hash.c:652
 msgid "allocating connection"
@@ -325,9 +326,8 @@ msgid "failed to write configuration file: %s"
 msgstr "não foi possível escrever o arquivo de configuração: %s"
 
 #: src/virterror.c:581
-#, fuzzy
 msgid "parser error"
-msgstr "erro interno"
+msgstr "erro do analisador"
 
 #: src/xmlrpc.c:63
 msgid "copying node content"
@@ -541,9 +541,8 @@ msgid "domain information incomplete, missing kernel"
 msgstr "informação do domínio incompleta, falta kernel"
 
 #: src/xend_internal.c:1604
-#, fuzzy
 msgid "domain information incomplete, vbd has no src"
-msgstr "informação do domínio incompleta, vbd não tem dev"
+msgstr "informação do domínio incompleta, vbd não tem src"
 
 #: src/xend_internal.c:1610
 msgid "domain information incomplete, vbd has no dev"
@@ -551,11 +550,11 @@ msgstr "informação do domínio incompleta, vbd não tem dev"
 
 #: src/xend_internal.c:1618
 msgid "cannot parse vbd filename, missing driver name"
-msgstr ""
+msgstr "impossível analisar nome de arquivo vbd, nome do driver faltando"
 
 #: src/xend_internal.c:1637
 msgid "cannot parse vbd filename, missing driver type"
-msgstr ""
+msgstr "impossível analisar nome de arquivo vbd, tipo de driver faltando"
 
 #: src/xend_internal.c:1981
 msgid "failed to parse Xend domain information"
@@ -576,10 +575,10 @@ msgstr "Não foi possível obter dispositivos para o domínio %s\n"
 msgid "Failed to resume new domain %s\n"
 msgstr "Não foi possível prosseguir com domínio novo %s\n"
 
-#: src/xend_internal.c:3146
-#, fuzzy, c-format
+#: src/xend_internal.c:3145
+#, c-format
 msgid "Failed to create inactive domain %s\n"
-msgstr "Não foi possível criar domínio %s\n"
+msgstr "Não foi possível criar o domínio inativo %s\n"
 
 #: src/virsh.c:234
 msgid "print help"
@@ -836,27 +835,25 @@ msgstr "Não foi possível restaurar domínio a partir de %s"
 
 #: src/virsh.c:812
 msgid "dump the core of a domain to a file for analysis"
-msgstr ""
+msgstr "descarregar memória de um domínio em um arquivo para análise"
 
 #: src/virsh.c:813
-#, fuzzy
 msgid "Core dump a domain."
-msgstr "restaurar um domínio"
+msgstr "Descarregar a memória de um domínio."
 
 #: src/virsh.c:819
-#, fuzzy
 msgid "where to dump the core"
-msgstr "onde salvar os dados"
+msgstr "onde salvar os dados de memória"
 
 #: src/virsh.c:841
-#, fuzzy, c-format
+#, c-format
 msgid "Domain %s dumpd to %s\n"
-msgstr "Domínio %s foi gravado em %s\n"
+msgstr "Domínio %s foi descarregado em %s\n"
 
 #: src/virsh.c:843
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to core dump domain %s to %s"
-msgstr "Não foi possível salvar o domínio %s em %s"
+msgstr "Não foi possível descarregar a memória do domínio %s em %s"
 
 #: src/virsh.c:857
 msgid "resume a domain"
