--- a/po/sr.po
+++ b/po/sr.po
@@ -1,14 +1,14 @@
 # Serbian translations for libvirt
 # Copyright (C) 2006 Red Hat, Inc.
 # This file is distributed under the same license as the libvirt package.
-# Miloš Komarčević <kmilos@gmail.com>, 206.
+# Miloš Komarčević <kmilos@gmail.com>, 2006.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: libvirt\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-12-14 10:47+0100\n"
-"PO-Revision-Date: 2006-10-01 12:36+0100\n"
+"POT-Creation-Date: 2006-12-20 15:40+0100\n"
+"PO-Revision-Date: 2006-12-17 12:20+0100\n"
 "Last-Translator: Miloš Komarčević <kmilos@gmail.com>\n"
 "Language-Team: Serbian (sr) <fedora@prevod.org>\n"
 "MIME-Version: 1.0\n"
@@ -540,9 +540,8 @@ msgid "domain information incomplete, missing kernel"
 msgstr "непотпуни подаци о домену, недостаје језгро"
 
 #: src/xend_internal.c:1604
-#, fuzzy
 msgid "domain information incomplete, vbd has no src"
-msgstr "непотпуни подаци о домену, vbd нема dev"
+msgstr "непотпуни подаци о домену, vbd нема src"
 
 #: src/xend_internal.c:1610
 msgid "domain information incomplete, vbd has no dev"
@@ -551,10 +550,12 @@ msgstr "непотпуни подаци о домену, vbd нема dev"
 #: src/xend_internal.c:1618
 msgid "cannot parse vbd filename, missing driver name"
 msgstr ""
+"не могу протумачити vbd име датотеке, недостаје име управљачког програма"
 
 #: src/xend_internal.c:1637
 msgid "cannot parse vbd filename, missing driver type"
 msgstr ""
+"не могу протумачити vbd име датотеке, недостаје врста управљачког програма"
 
 #: src/xend_internal.c:1981
 msgid "failed to parse Xend domain information"
@@ -575,7 +576,7 @@ msgstr "Неуспело прибављање уређаја за домен %s\
 msgid "Failed to resume new domain %s\n"
 msgstr "Неуспело настављање новог домена %s\n"
 
-#: src/xend_internal.c:3146
+#: src/xend_internal.c:3145
 #, fuzzy, c-format
 msgid "Failed to create inactive domain %s\n"
 msgstr "Неуспело прављење домена %s\n"
@@ -835,27 +836,25 @@ msgstr "Неуспело враћање домена из %s"
 
 #: src/virsh.c:812
 msgid "dump the core of a domain to a file for analysis"
-msgstr ""
+msgstr "избаци срж домена у датотеку ради анализе"
 
 #: src/virsh.c:813
-#, fuzzy
 msgid "Core dump a domain."
-msgstr "настави домен"
+msgstr "Избаци срж домена"
 
 #: src/virsh.c:819
-#, fuzzy
 msgid "where to dump the core"
-msgstr "где сачувати податке"
+msgstr "где избацити срж"
 
 #: src/virsh.c:841
-#, fuzzy, c-format
+#, c-format
 msgid "Domain %s dumpd to %s\n"
-msgstr "Домен %s је сачуван у %s\n"
+msgstr "Домен %s је избачен у %s\n"
 
 #: src/virsh.c:843
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to core dump domain %s to %s"
-msgstr "Неуспело чување домена %s у %s"
+msgstr "Неуспео избачај сржи домена %s у %s"
 
 #: src/virsh.c:857
 msgid "resume a domain"
