--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: zh_TW\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-12-14 10:47+0100\n"
-"PO-Revision-Date: 2006-11-26 19:30+1000\n"
+"POT-Creation-Date: 2006-12-20 15:40+0100\n"
+"PO-Revision-Date: 2006-12-15 09:25+1000\n"
 "Last-Translator: Chester Cheng <ccheng@redhat.com>\n"
 "Language-Team: Chinese, Traditional <zh_TW@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -326,9 +326,8 @@ msgid "failed to write configuration file: %s"
 msgstr "無法寫入設定檔：%s"
 
 #: src/virterror.c:581
-#, fuzzy
 msgid "parser error"
-msgstr "內部錯誤"
+msgstr "解析程式錯誤"
 
 #: src/xmlrpc.c:63
 msgid "copying node content"
@@ -542,9 +541,8 @@ msgid "domain information incomplete, missing kernel"
 msgstr "區域的資訊不全，沒有核心"
 
 #: src/xend_internal.c:1604
-#, fuzzy
 msgid "domain information incomplete, vbd has no src"
-msgstr "區域的資訊不全，vbd 沒有 dev"
+msgstr "區域的資訊不全，vbd 沒有 src"
 
 #: src/xend_internal.c:1610
 msgid "domain information incomplete, vbd has no dev"
@@ -552,11 +550,11 @@ msgstr "區域的資訊不全，vbd 沒有 dev"
 
 #: src/xend_internal.c:1618
 msgid "cannot parse vbd filename, missing driver name"
-msgstr ""
+msgstr "無法解析 vbd 檔名，找不到驅動程式名稱"
 
 #: src/xend_internal.c:1637
 msgid "cannot parse vbd filename, missing driver type"
-msgstr ""
+msgstr "無法解析 vbd 檔名，找不到驅動程式類型"
 
 #: src/xend_internal.c:1981
 msgid "failed to parse Xend domain information"
@@ -577,10 +575,10 @@ msgstr "無法為區域 %s 取得裝置\n"
 msgid "Failed to resume new domain %s\n"
 msgstr "無法繼續新的區域 %s\n"
 
-#: src/xend_internal.c:3146
-#, fuzzy, c-format
+#: src/xend_internal.c:3145
+#, c-format
 msgid "Failed to create inactive domain %s\n"
-msgstr "無法建立區域 %s\n"
+msgstr "無法建立非運作中的區域 %s\n"
 
 #: src/virsh.c:234
 msgid "print help"
@@ -835,27 +833,25 @@ msgstr "無法從 %s 回復區域"
 
 #: src/virsh.c:812
 msgid "dump the core of a domain to a file for analysis"
-msgstr ""
+msgstr "將一個區域的核心傾印到檔案中，以供分析用"
 
 #: src/virsh.c:813
-#, fuzzy
 msgid "Core dump a domain."
-msgstr "繼續執行區域"
+msgstr "傾印一個區域的核心。"
 
 #: src/virsh.c:819
-#, fuzzy
 msgid "where to dump the core"
-msgstr "將資料存至何處"
+msgstr "將核心傾印至何處"
 
 #: src/virsh.c:841
-#, fuzzy, c-format
+#, c-format
 msgid "Domain %s dumpd to %s\n"
-msgstr "區域 %s 已存至 %s\n"
+msgstr "區域 %s 已傾印至 %s\n"
 
 #: src/virsh.c:843
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to core dump domain %s to %s"
-msgstr "無法將區域 %s 存至 %s"
+msgstr "無法將區域 %s 的核心傾印至 %s"
 
 #: src/virsh.c:857
 msgid "resume a domain"
