--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Thu Jan 18 13:37:02 EST 2007 Daniel Berrange <berrange@redhat.com>
+
+	* src/xend_internal.c: Tweak some of the new inactive domain methods
+	to only run when XenD is >= 3.0.4, so it falls back correctly to
+	the src/xm_internal.c driver.
+
 Wed Jan 10 16:20:02 CET 2007 Daniel Veillard <veillard@redhat.com>
 
 	* docs/libvirt.rng: udated for the upcoming KVM and QEmu support
