--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Thu Jan 18 16:05:13 EST 2007 Daniel Berrange <berrange@redhat.com>
+
+	* src/test.h, src/test.c: Implement full inactive domain management
+	support in mock hypervisor to allow testing of apps wanting inactive
+	domains.
+
 Thu Jan 18 13:37:02 EST 2007 Daniel Berrange <berrange@redhat.com>
 
 	* src/xend_internal.c: Tweak some of the new inactive domain methods
@@ -14,7 +20,7 @@ Wed Jan 10 11:06:36 CET 2007 Daniel Veillard <veillard@redhat.com>
 	  fixed or added a number constructs
 
 Tue Jan  9 17:28:18 CET 2007 Daniel Veillard <veillard@redhat.com>
-	
+
 	* docs/libvirt.rng: first version of the Relax-NG schemas to validate
 	  XML instances
 
