--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+Fri Jan 19 15:28:13 EST 2007 Daniel Berrange <berrange@redhat.com>
+
+	* tests/xmconfigtest.c: Test suite to check conversion from
+	XML to XM config files, and the reverse
+	* tests/xmconfigdata/*.xml: Source XML files for the test
+	suite
+	* tests/xmconfigdata/*.cfg: Source XM config files for the
+	test suite
+	* configure.ac, tests/Makefile.am: Added xmconfigdata subdir
+	* tests/xmconfigdata/Makefile.am: Include config files when
+	doing a make dist.
+
 Fri Jan 19 15:23:13 EST 2007 Daniel Berrange <berrange@redhat.com>
 
 	* src/xm_internal.c: Finished off the conversion from XML
