--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Jan 26 12:09:49 CET 2007 Daniel Veillard <veillard@redhat.com>
+
+	* autogen.sh: applied patch from Richard W.M. Jones to not
+	  output instructions if configure failed
+
 Mon Jan 23 14:36:18 IST 2007 Mark McLoughlin <markmc@redhat.com>
 
 	* include/libvirt/libvirt.h.in: add VIR_UUID_BUFLEN and
