--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Jan 26 12:48:13 CET 2007 Daniel Veillard <veillard@redhat.com>
+
+	* src/virsh.c: Richard W.M. Jones pointed out a missing option
+	  in getopt_long()
+
 Fri Jan 26 12:09:49 CET 2007 Daniel Veillard <veillard@redhat.com>
 
 	* autogen.sh: applied patch from Richard W.M. Jones to not
