--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Jan 26 07:59:52 EST 2007 Daniel Berrange <berrange@redhat.com>
+
+	* src/virshtest.c: Fixed up for new way test driver enumerates
+	domains
+
 Fri Jan 26 06:53:52 EST 2007 Daniel Berrange <berrange@redhat.com>
 
 	* src/virshc: Added 'console' and 'vncdisplay' commands to
