--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+Tue Feb 13 19:46:35 EST 2007 Daniel Berrange <berrange@redhat.com>
+
+	* autobuild.sh: Run coverage tests during automated build
+	* autogen.sh: Point aclocal at m4 directory explicitly
+	* configure.in: Added command line arg to enable coverage
+	* Makefile.am: Added scripts directory
+	* src/Makefile.am: Build with coverage testing if requested
+	and add target for extracting coverage data
+	* scripts/*: Helper tools for coverage testing
+	* tests/Makefile.am: Make tests link to object files instad
+	of the static library to ensure single output dest for
+	coverage data when running tests
+
 Tue Feb 13 19:29:35 EST 2007 Daniel Berrange <berrange@redhat.com>
 
 	* src/qemu_internal.h, src/qemu_internal.c, src/Makefile.am,
