--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Feb 14 12:35:24 EST 2007 Daniel P. Berrange <berrange@redhat.com>
+
+	* libvirt.spec.in: Added dep on libsysfs-devel. Pre-create
+	the qemu config dir & socket dir.
+
 Tue Feb 14 12:19:24 EST 2007 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/qemu_internal.c, qemud/qemud.c: Move configs into
